[#14745] Make PhysicalAddress not JGroups aware
Signed-off-by: Pedro Ruivo <pruivo@redhat.com>